tests/integration/first_class_functions/first_class_function_value_call_error.june
// error: type mismatch for arg

fun foo(x: i64) -> i64 {
    return x
}

let bar = foo

println(bar(c"bob"))